// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthPhone (signin) > matches snapshot at default props 1`] = `
<rn-View
  className="flex-1 bg-background"
  style={
    [
      {
        "paddingBottom": 34,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 44,
      },
      undefined,
    ]
  }
>
  <rn-KeyboardAvoidingView
    behavior="padding"
    className="flex-1"
  >
    <rn-ScrollView
      className="flex-1"
      contentContainerClassName="grow px-6 py-10"
      keyboardShouldPersistTaps="handled"
    >
      <rn-View
        className="w-full max-w-sm self-center"
      >
        <rn-View
          className="flex-row items-center gap-3"
        >
          <rn-Image
            accessibilityLabel="Harpa Pro"
            className="h-12 w-12 rounded-lg"
            resizeMode="contain"
            source="/assets/icon.png"
          />
          <rn-View
            className="flex-1"
          >
            <rn-Text
              className="text-display text-foreground"
            >
              Harpa Pro
            </rn-Text>
          </rn-View>
        </rn-View>
        <rn-View
          className="mt-8 gap-4"
        >
          <rn-View
            className="gap-2"
          >
            <rn-Text
              className="text-label text-muted-foreground"
            >
              Phone Number
            </rn-Text>
            <rn-View
              className="flex-row gap-2"
            >
              <rn-Pressable
                accessibilityLabel="Country: United States of America, +1. Tap to change."
                accessibilityRole="button"
                className="min-h-touch flex-row items-center gap-2 rounded-md border px-3 border-border bg-card active:opacity-85"
                disabled={false}
                onPress={[Function]}
                style={
                  {
                    "elevation": 2,
                    "shadowColor": "#1a1a2e",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 0.08,
                    "shadowRadius": 8,
                  }
                }
                testID="btn-country-picker"
              >
                <rn-Text
                  className="text-base text-foreground"
                >
                  +1
                </rn-Text>
                <lucide-ChevronDown
                  color="#5f5b66"
                  size={16}
                />
              </rn-Pressable>
              <rn-View
                className="min-h-touch flex-1 flex-row items-center rounded-md border border-border bg-card"
                style={
                  {
                    "elevation": 2,
                    "shadowColor": "#1a1a2e",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 0.08,
                    "shadowRadius": 8,
                  }
                }
              >
                <rn-TextInput
                  autoComplete="tel"
                  autoFocus={false}
                  className="flex-1 px-4 py-3 text-base text-foreground"
                  editable={true}
                  keyboardType="phone-pad"
                  onChangeText={[MockFunction spy]}
                  placeholder="Phone number"
                  placeholderTextColor="#5f5b66"
                  style={
                    {
                      "lineHeight": 16,
                      "textAlignVertical": "center",
                    }
                  }
                  testID="input-phone"
                  value=""
                />
              </rn-View>
            </rn-View>
          </rn-View>
          <rn-Pressable
            className="flex-row items-center justify-center rounded-md border border-accent bg-accent active:opacity-85 min-h-touch-lg px-6 py-4 w-full"
            disabled={false}
            onPress={[MockFunction spy]}
            style={
              [
                {
                  "elevation": 4,
                  "shadowColor": "#1a1a2e",
                  "shadowOffset": {
                    "height": 4,
                    "width": 0,
                  },
                  "shadowOpacity": 0.12,
                  "shadowRadius": 14,
                },
                undefined,
              ]
            }
            testID="btn-login-send-code"
          >
            <rn-Text
              className="text-accent-foreground font-semibold text-lg"
            >
              Send Code
            </rn-Text>
          </rn-Pressable>
        </rn-View>
        <rn-View
          accessibilityLabel="Build info"
          className="mt-6 items-center"
          testID="sign-in-build-badge"
        >
          <rn-Pressable
            accessibilityLabel="Build v0.0.0+testsha. api …. Long press to copy commits."
            accessibilityRole="button"
            delayLongPress={400}
            onLongPress={[Function]}
            testID="sign-in-build-badge-version"
          >
            <rn-Text
              className="text-[10px] text-muted-foreground"
              numberOfLines={1}
            >
              v0.0.0+testsha · api … · …
            </rn-Text>
          </rn-Pressable>
        </rn-View>
      </rn-View>
    </rn-ScrollView>
  </rn-KeyboardAvoidingView>
</rn-View>
`;

exports[`AuthPhone (signup) > matches snapshot at default props 1`] = `
<rn-View
  className="flex-1 bg-background"
  style={
    [
      {
        "paddingBottom": 34,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 44,
      },
      undefined,
    ]
  }
>
  <rn-KeyboardAvoidingView
    behavior="padding"
    className="flex-1"
  >
    <rn-View
      className="px-5 pt-3"
    >
      <rn-Pressable
        accessibilityLabel="Back to Sign In"
        className="flex-row items-center gap-2 py-2"
        onPress={[MockFunction spy]}
        testID="btn-signup-back"
      >
        <lucide-ArrowLeft
          color="#2d3a5a"
          size={20}
        />
        <rn-Text
          className="text-base font-semibold text-foreground"
        >
          Back to Sign In
        </rn-Text>
      </rn-Pressable>
    </rn-View>
    <rn-ScrollView
      className="flex-1"
      contentContainerClassName="grow px-6 py-10"
      keyboardShouldPersistTaps="handled"
    >
      <rn-View
        className="w-full max-w-sm self-center"
      >
        <rn-View
          className="flex-row items-center gap-3"
        >
          <rn-Image
            accessibilityLabel="Harpa Pro"
            className="h-12 w-12 rounded-lg"
            resizeMode="contain"
            source="/assets/icon.png"
          />
          <rn-View
            className="flex-1"
          >
            <rn-Text
              className="text-display text-foreground"
            >
              Create Account
            </rn-Text>
          </rn-View>
        </rn-View>
        <rn-View
          className="mt-8 gap-4"
        >
          <rn-View
            className="gap-2"
          >
            <rn-Text
              className="text-label text-muted-foreground"
            >
              Phone Number
            </rn-Text>
            <rn-View
              className="flex-row gap-2"
            >
              <rn-Pressable
                accessibilityLabel="Country: United States of America, +1. Tap to change."
                accessibilityRole="button"
                className="min-h-touch flex-row items-center gap-2 rounded-md border px-3 border-border bg-card active:opacity-85"
                disabled={false}
                onPress={[Function]}
                style={
                  {
                    "elevation": 2,
                    "shadowColor": "#1a1a2e",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 0.08,
                    "shadowRadius": 8,
                  }
                }
                testID="btn-signup-country-picker"
              >
                <rn-Text
                  className="text-base text-foreground"
                >
                  +1
                </rn-Text>
                <lucide-ChevronDown
                  color="#5f5b66"
                  size={16}
                />
              </rn-Pressable>
              <rn-View
                className="min-h-touch flex-1 flex-row items-center rounded-md border border-border bg-card"
                style={
                  {
                    "elevation": 2,
                    "shadowColor": "#1a1a2e",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 0.08,
                    "shadowRadius": 8,
                  }
                }
              >
                <rn-TextInput
                  autoComplete="tel"
                  autoFocus={true}
                  className="flex-1 px-4 py-3 text-base text-foreground"
                  editable={true}
                  keyboardType="phone-pad"
                  onChangeText={[MockFunction spy]}
                  placeholder="Phone number"
                  placeholderTextColor="#5f5b66"
                  style={
                    {
                      "lineHeight": 16,
                      "textAlignVertical": "center",
                    }
                  }
                  testID="input-signup-phone"
                  value=""
                />
              </rn-View>
            </rn-View>
          </rn-View>
          <rn-Pressable
            className="flex-row items-center justify-center rounded-md border border-accent bg-accent active:opacity-85 min-h-touch-lg px-6 py-4 w-full"
            disabled={false}
            onPress={[MockFunction spy]}
            style={
              [
                {
                  "elevation": 4,
                  "shadowColor": "#1a1a2e",
                  "shadowOffset": {
                    "height": 4,
                    "width": 0,
                  },
                  "shadowOpacity": 0.12,
                  "shadowRadius": 14,
                },
                undefined,
              ]
            }
            testID="btn-signup-send-code"
          >
            <rn-Text
              className="text-accent-foreground font-semibold text-lg"
            >
              Send Code
            </rn-Text>
          </rn-Pressable>
          <rn-Pressable
            accessibilityRole="button"
            className="mt-8 items-center py-2"
            onPress={[MockFunction spy]}
            testID="link-go-sign-in"
          >
            <rn-Text
              className="text-base text-muted-foreground"
            >
              Already have an account?
               
              <rn-Text
                className="font-semibold text-foreground underline"
              >
                Sign In
              </rn-Text>
            </rn-Text>
          </rn-Pressable>
        </rn-View>
        <rn-View
          accessibilityLabel="Build info"
          className="mt-6 items-center"
          testID="sign-up-build-badge"
        >
          <rn-Pressable
            accessibilityLabel="Build v0.0.0+testsha. api …. Long press to copy commits."
            accessibilityRole="button"
            delayLongPress={400}
            onLongPress={[Function]}
            testID="sign-up-build-badge-version"
          >
            <rn-Text
              className="text-[10px] text-muted-foreground"
              numberOfLines={1}
            >
              v0.0.0+testsha · api … · …
            </rn-Text>
          </rn-Pressable>
        </rn-View>
      </rn-View>
    </rn-ScrollView>
  </rn-KeyboardAvoidingView>
</rn-View>
`;
